--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "refresh commands": "ts-node deploy-commands.ts",
         "start": "node build/index.js",
         "build": "tsc",
+        "tsc": "tsc",
         "postinstall": "npm run build"
     },
     "keywords": [],
