--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "npm run build && node dist/index.js",
         "build": "rimraf ./dist && tsc",
-        "start:dev": "nodemon app/index.ts"
+        "start:dev": "nodemon app/index.ts",
+        "postinstall": "tsc"
     },
     "keywords": [],
     "author": "",
@@ -26,5 +27,8 @@
         "dotenv": "^10.0.0",
         "googleapis": "^91.0.0",
         "lodash": "^4.17.21"
+    },
+    "engines": {
+        "node": "16.13.0"
     }
 }
