--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "description": "",
     "main": "dist/index.js",
     "scripts": {
-        "start": "npm run build && node dist/index.js",
-        "build": "rimraf ./dist && tsc",
+        "start": "node dist/index.js",
+        "build": "tsc",
         "start:dev": "nodemon app/index.ts",
-        "postinstall": "tsc"
+        "postinstall": "npm run build"
     },
     "keywords": [],
     "author": "",
