--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "node dist/index.js",
         "build": "tsc",
         "start:dev": "nodemon app/index.ts",
-        "postinstall": "npm run build"
+        "postinstall": "npm run build",
+        "deploy commands": "ts-node app/deploy-commands.ts"
     },
     "keywords": [],
     "author": "",
